--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 
 <script>
   // Your web app's Firebase configuration
-  var firebaseConfig = {
-    apiKey: "AIzaSyDWruNu2MpLPCU6tzxcRm79hKqT5IVBzB8",
-    authDomain: "multiplayer-racing-e2773.firebaseapp.com",
-    databaseURL: "https://multiplayer-racing-e2773-default-rtdb.firebaseio.com",
-    projectId: "multiplayer-racing-e2773",
-    storageBucket: "multiplayer-racing-e2773.appspot.com",
-    messagingSenderId: "695142558940",
-    appId: "1:695142558940:web:68ef57282cb65bed8c1819"
-  };
+const firebaseConfig = {
+  apiKey: "AIzaSyAsE70atamo6nlbrCPIdIkQetcFNINAPUo",
+  authDomain: "mpgproject-11b88.firebaseapp.com",
+  databaseURL: "https://mpgproject-11b88-default-rtdb.firebaseio.com",
+  projectId: "mpgproject-11b88",
+  storageBucket: "mpgproject-11b88.appspot.com",
+  messagingSenderId: "986806706247",
+  appId: "1:986806706247:web:e3e683fa7fbd883010d162"
+};
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
 </script>
